# comp0034-wk8

./: README.md  pyproject.toml  requirements.txt
activities/: 1-dash.md  1-flask.md  flask-1-add-event-page.md  flask-2-prediction.md  flask-4-add-event-page.md  flask-5-prediction.md  flask-6-challenge.md
data/: create_db_add_data.py  create_db_dash.py  paralympic_events.csv
src/dash_sqlalchemy_example/: paralympics.sqlite  server.py
src/paralympics_dash/: figures.py  paralympics_dash.py
src/paralympics_dash_multi/: paralympics_app.py
src/paralympics_dash_multi/pages/: charts.py  events.py
src/paralympics_flask/: __init__.py  models.py  views.py
src/paralympics_flask/templates/: base.html  index.html  navbar.html
src/paralympics_rest/: __init__.py  error_handlers.py  models.py  routes.py  schemas.py
