[project]
name = "paralympics"
version = "1"
description = "Week 8 coding activities"
dependencies = [
    # For Flask apps
    "Flask",
    "Flask-SQLAlchemy",
    # For Dash apps
    "dash",
    "dash-bootstrap-components",
    "pandas"
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
# include = ["paralympics_dash", "paralympics_flask"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
